SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Criteria_Group__c/CPQ_Playbook_Rule_Criteria_Group__c.object-meta.xml
<CustomObject>
    <description>Object to house 1 or more CPQ Playbook Rule Criterion records</description>
    <label>CPQ Playbook Rule Criteria Group</label>
    <nameField>
        <label>Criteria Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Playbook Rule Criteria Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>