SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Criteria_Group__c/fields/CPQ_Playbook_Rule__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Playbook_Rule__c</fullName>
    <description>CPQ Playbook Rule in which the Criteria Group is evaluated</description>
    <inlineHelpText>Playbook Rule in which the Criteria Group is evaluated</inlineHelpText>
    <label>CPQ Playbook Rule</label>
    <referenceTo>CPQ_Playbook_Rule__c</referenceTo>
    <relationshipLabel>CPQ Playbook Rule Criteria Groups</relationshipLabel>
    <relationshipName>CPQ_Playbook_Rule_Criteria_Groups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>