SFDC_LD_Packages/CPQ/main/default/objects/CPQ_Playbook_Rule_Criteria_Group__c/fields/Evaluation_Logic__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Logic__c</fullName>
    <description>Determines how group should be evaluated against other groups on same rule</description>
    <inlineHelpText>Determines how group should be evaluated against other groups on same rule</inlineHelpText>
    <label>Evaluation Logic</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>One of N required</fullName>
            </value>
            <value>
                <fullName>One of at least N required</fullName>
            </value>
            <value>
                <fullName>One of at most N required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>